--- a/src/main/resources/static/angularjs/views/app/inquiry.html
+++ b/src/main/resources/static/angularjs/views/app/inquiry.html
@@ -1,6 +1,9 @@
 <div>
 	<div class = "container">
 
+		<input type="text" ng-model="searchForm.title"/>
+
+		<button type="button" ng-click="seachButton();"> search</button>
 		<div>
 			<table>
 				<tr>
